--- a/Sites/MetraView/App_LocalResources/Bill.aspx.en-GB.resx
+++ b/Sites/MetraView/App_LocalResources/Bill.aspx.en-GB.resx
@@ -120,6 +120,9 @@
     <data name="BillAndPayments.Text" xml:space="preserve">
         <value>Bill &amp; Payments</value>
     </data>
+    <data name="Charge.Text" xml:space="preserve">
+      <value>Charge</value>
+    </data>
     <data name="DetailedView.Text" xml:space="preserve">
         <value>Detailed View</value>
     </data>
@@ -128,5 +131,8 @@
     </data>
     <data name="SummaryView.Text" xml:space="preserve">
         <value>Summary View</value>
+    </data>
+    <data name="Charge.Text" xml:space="preserve">
+      <value>Charges</value>
     </data>
 </root>
