--- a/Sites/MetraView/App_LocalResources/Bill.aspx.fr.resx
+++ b/Sites/MetraView/App_LocalResources/Bill.aspx.fr.resx
@@ -120,6 +120,9 @@
     <data name="BillAndPayments.Text" xml:space="preserve">
         <value>Facturation &amp; paiements</value>
     </data>
+    <data name="Charge.Text" xml:space="preserve">
+      <value>Frais</value>
+    </data>
     <data name="DetailedView.Text" xml:space="preserve">
         <value>Vue détaillée</value>
     </data>
