--- a/Sites/MetraView/UserControls/App_LocalResources/CurrentCharges.ascx.es-MX.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/CurrentCharges.ascx.es-MX.resx
@@ -112,30 +112,42 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Charge.Text" xml:space="preserve">
-        <value>Cargos</value>
-    </data>
-    <data name="PrebillAdjustments.Text" xml:space="preserve">
-        <value>Ajustes previos a la facturación</value>
-    </data>
-    <data name="SubTotal.Text" xml:space="preserve">
-        <value>Subtotal</value>
-    </data>
-    <data name="Tax.Text" xml:space="preserve">
-        <value>Impuesto</value>
-    </data>
-    <data name="TaxAdjustments.Text" xml:space="preserve">
-        <value>Ajustes de impuestos</value>
-    </data>
-    <data name="Total.Text" xml:space="preserve">
-        <value>Total</value>
-    </data>
-    <data name="TotalCharges.Text" xml:space="preserve">
-        <value>Total cargos</value>
-    </data>
+  <data name="ActualTax.Text" xml:space="preserve">
+    <value>[es-MX]Actual Tax</value>
+  </data>
+  <data name="ImpliedTax.Text" xml:space="preserve">
+    <value>[es-MX]Included Tax</value>
+  </data>
+  <data name="IncludedInformationalTax.Text" xml:space="preserve">
+    <value>[es-MX]Included Informational Tax</value>
+  </data>
+  <data name="InformationalTax.Text" xml:space="preserve">
+    <value>[es-MX]Informational Tax</value>
+  </data>
+  <data name="PrebillAdjustments.Text" xml:space="preserve">
+    <value>Ajustes previos a la facturación</value>
+  </data>
+  <data name="SubTotal.Text" xml:space="preserve">
+    <value>Subtotal</value>
+  </data>
+  <data name="Tax.Text" xml:space="preserve">
+    <value>Impuesto</value>
+  </data>
+  <data name="TaxAdjustments.Text" xml:space="preserve">
+    <value>Ajustes de impuestos</value>
+  </data>
+  <data name="Total.Text" xml:space="preserve">
+    <value>Total</value>
+  </data>
+  <data name="TotalCharges.Text" xml:space="preserve">
+    <value>Total cargos</value>
+  </data>
+  <data name="Usage.Text" xml:space="preserve">
+    <value>[es-MX]Usage</value>
+  </data>
 </root>
