--- a/Sites/MetraView/UserControls/App_LocalResources/CurrentCharges.ascx.ja.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/CurrentCharges.ascx.ja.resx
@@ -117,25 +117,37 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Charge.Text" xml:space="preserve">
-        <value>料金</value>
-    </data>
-    <data name="PrebillAdjustments.Text" xml:space="preserve">
-        <value>請求前の調整</value>
-    </data>
-    <data name="SubTotal.Text" xml:space="preserve">
-        <value>小計</value>
-    </data>
-    <data name="Tax.Text" xml:space="preserve">
-        <value>税金</value>
-    </data>
-    <data name="TaxAdjustments.Text" xml:space="preserve">
-        <value>税金の調整</value>
-    </data>
-    <data name="Total.Text" xml:space="preserve">
-        <value>合計</value>
-    </data>
-    <data name="TotalCharges.Text" xml:space="preserve">
-        <value>料金合計</value>
-    </data>
+  <data name="ActualTax.Text" xml:space="preserve">
+    <value>[JA]Actual Tax</value>
+  </data>
+  <data name="ImpliedTax.Text" xml:space="preserve">
+    <value>[JA]Included Tax</value>
+  </data>
+  <data name="IncludedInformationalTax.Text" xml:space="preserve">
+    <value>[JA]Included Informational Tax</value>
+  </data>
+  <data name="InformationalTax.Text" xml:space="preserve">
+    <value>[JA]Informational Tax</value>
+  </data>
+  <data name="PrebillAdjustments.Text" xml:space="preserve">
+    <value>請求前の調整</value>
+  </data>
+  <data name="SubTotal.Text" xml:space="preserve">
+    <value>小計</value>
+  </data>
+  <data name="Tax.Text" xml:space="preserve">
+    <value>税金</value>
+  </data>
+  <data name="TaxAdjustments.Text" xml:space="preserve">
+    <value>税金の調整</value>
+  </data>
+  <data name="Total.Text" xml:space="preserve">
+    <value>合計</value>
+  </data>
+  <data name="TotalCharges.Text" xml:space="preserve">
+    <value>料金合計</value>
+  </data>
+  <data name="Usage.Text" xml:space="preserve">
+    <value>[JA]Usage</value>
+  </data>
 </root>
