--- a/Sites/MetraView/UserControls/App_LocalResources/CurrentCharges.ascx.de.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/CurrentCharges.ascx.de.resx
@@ -117,25 +117,37 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Charge.Text" xml:space="preserve">
-        <value>Gebühren</value>
-    </data>
-    <data name="PrebillAdjustments.Text" xml:space="preserve">
-        <value>Anpassungen vor Rechnungsstellung</value>
-    </data>
-    <data name="SubTotal.Text" xml:space="preserve">
-        <value>Zwischensumme</value>
-    </data>
-    <data name="Tax.Text" xml:space="preserve">
-        <value>Steuern</value>
-    </data>
-    <data name="TaxAdjustments.Text" xml:space="preserve">
-        <value>Steueranpassungen</value>
-    </data>
-    <data name="Total.Text" xml:space="preserve">
-        <value>Gesamt</value>
-    </data>
-    <data name="TotalCharges.Text" xml:space="preserve">
-        <value>Gebührensumme</value>
-    </data>
+  <data name="ActualTax.Text" xml:space="preserve">
+    <value>[DE]Actual Tax</value>
+  </data>
+  <data name="ImpliedTax.Text" xml:space="preserve">
+    <value>[DE]Included Tax</value>
+  </data>
+  <data name="IncludedInformationalTax.Text" xml:space="preserve">
+    <value>[DE]Included Informational Tax</value>
+  </data>
+  <data name="InformationalTax.Text" xml:space="preserve">
+    <value>[DE]Informational Tax</value>
+  </data>
+  <data name="PrebillAdjustments.Text" xml:space="preserve">
+    <value>Anpassungen vor Rechnungsstellung</value>
+  </data>
+  <data name="SubTotal.Text" xml:space="preserve">
+    <value>Zwischensumme</value>
+  </data>
+  <data name="Tax.Text" xml:space="preserve">
+    <value>Steuern</value>
+  </data>
+  <data name="TaxAdjustments.Text" xml:space="preserve">
+    <value>Steueranpassungen</value>
+  </data>
+  <data name="Total.Text" xml:space="preserve">
+    <value>Gesamt</value>
+  </data>
+  <data name="TotalCharges.Text" xml:space="preserve">
+    <value>Gebührensumme</value>
+  </data>
+  <data name="Usage.Text" xml:space="preserve">
+    <value>[DE]Usage</value>
+  </data>
 </root>
