--- a/Sites/MetraView/UserControls/App_LocalResources/CurrentCharges.ascx.pt-br.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/CurrentCharges.ascx.pt-br.resx
@@ -112,30 +112,42 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Charge.Text" xml:space="preserve">
-        <value>Cobranças</value>
-    </data>
-    <data name="PrebillAdjustments.Text" xml:space="preserve">
-        <value>Ajustes pré-faturamento</value>
-    </data>
-    <data name="SubTotal.Text" xml:space="preserve">
-        <value>Subtotal</value>
-    </data>
-    <data name="Tax.Text" xml:space="preserve">
-        <value>Imposto</value>
-    </data>
-    <data name="TaxAdjustments.Text" xml:space="preserve">
-        <value>Ajuste de imposto</value>
-    </data>
-    <data name="Total.Text" xml:space="preserve">
-        <value>Total</value>
-    </data>
-    <data name="TotalCharges.Text" xml:space="preserve">
-        <value>Total de cobranças</value>
-    </data>
+  <data name="ActualTax.Text" xml:space="preserve">
+    <value>[pt-BR]Actual Tax</value>
+  </data>
+  <data name="ImpliedTax.Text" xml:space="preserve">
+    <value>[pt-BR]Included Tax</value>
+  </data>
+  <data name="IncludedInformationalTax.Text" xml:space="preserve">
+    <value>[pt-BR]Included Informational Tax</value>
+  </data>
+  <data name="InformationalTax.Text" xml:space="preserve">
+    <value>[pt-BR]Informational Tax</value>
+  </data>
+  <data name="PrebillAdjustments.Text" xml:space="preserve">
+    <value>Ajustes pré-faturamento</value>
+  </data>
+  <data name="SubTotal.Text" xml:space="preserve">
+    <value>Subtotal</value>
+  </data>
+  <data name="Tax.Text" xml:space="preserve">
+    <value>Imposto</value>
+  </data>
+  <data name="TaxAdjustments.Text" xml:space="preserve">
+    <value>Ajuste de imposto</value>
+  </data>
+  <data name="Total.Text" xml:space="preserve">
+    <value>Total</value>
+  </data>
+  <data name="TotalCharges.Text" xml:space="preserve">
+    <value>Total de cobranças</value>
+  </data>
+  <data name="Usage.Text" xml:space="preserve">
+    <value>[pt-BR]Usage</value>
+  </data>
 </root>
