--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.es-MX.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.es-MX.resx
@@ -361,10 +361,10 @@
     <value>Bulk Update Search Results</value>
   </data>
   <data name="TEXT_ERROR_NOTHING_UPDATED_BULKUPDATE" xml:space="preserve">
-    <value>Nothing will be updated</value>
+      <value>Nothing will be updated</value>
   </data>
   <data name="TEXT_NO_SELECTED_BME_FOR_BULKUPDATE" xml:space="preserve">
-    <value>There are no selected BMEs for bulk update</value>
+      <value>There are no selected BMEs for bulk update</value>
   </data>
   <data name="TEXT_ERROR_TOO_MANY_RECORDS_BULKUPDATE" xml:space="preserve">
     <value>Too many records to update</value>
@@ -520,7 +520,7 @@
     <value>Propiedades</value>
   </data>
   <data name="TEXT_PRORATED_RECURRING_CHARGE_CREDIT_MESSAGE" xml:space="preserve">
-    <value>Recibió este crédito debido a que su suscripción con un cargo recurrente que se factura en forma anticipada cambió durante este período de facturación.&lt;BR&gt;&lt;BR&gt;En su factura anterior, le cobramos [RCAmount] en forma anticipada.  Usted solo utilizó el servicio entre [RCIntervalStart] y [ProratedIntervalStart].  Por lo tanto, este crédito representa la diferencia entre [ProratedIntervalStartNextDay] y [ProratedIntervalEnd].  Este es un período de [ProratedDays] días.&lt;BR&gt;&lt;BR&gt;Para calcular el crédito, utilizamos una tarifa diaria de [ProratedDailyRate].  La tarifa diaria se calculó al tomar [RCAmount] y dividirlo por el número de días en el período.  Por lo tanto, tomamos el período de [ProratedDays] días y lo multiplicamos por [ProratedDailyRate], lo que le otorga un crédito de [Amount].&lt;BR&gt;</value>
+    <value>Recibió este crédito debido a que su suscripción con un cargo recurrente que se factura en forma anticipada cambió durante este período de facturación.&lt;BR&gt;&lt;BR&gt;En su factura anterior, le cobramos [RCAmount] en forma anticipada.  Usted solo utilizó el servicio entre [RCIntervalStart] y [ProratedIntervalStart].  Por lo tanto, este crédito representa la diferencia entre [ProratedIntervalStart] y [ProratedIntervalEnd].  Este es un período de [ProratedDays] días.&lt;BR&gt;&lt;BR&gt;Para calcular el crédito, utilizamos una tarifa diaria de [ProratedDailyRate].  La tarifa diaria se calculó al tomar [RCAmount] y dividirlo por el número de días en el período.  Por lo tanto, tomamos el período de [ProratedDays] días y lo multiplicamos por [ProratedDailyRate], lo que le otorga un crédito de [Amount].&lt;BR&gt;</value>
   </data>
   <data name="TEXT_PRORATED_RECURRING_CHARGE_MESSAGE" xml:space="preserve">
     <value>Este cargo se ha prorrateado.  El prorrateo reduce los cargos al cobrarlo solo el número de días que se ha suscrito a un servicio en un período de facturación determinado.&lt;BR&gt;&lt;BR&gt;Para este elemento, sus cargos comenzaron el [ProratedIntervalStart] y terminaron el [ProratedIntervalEnd].  En consecuencia, recibió [ProratedDays] días de servicio.  Su cargo por este período se calculó al multiplicar la tarifa diaria de [ProratedDailyRate] por [ProratedDays] días de suscripción.  Esto es igual a [Amount].  (La tarifa diaria de [ProratedDailyRate] se calcula al dividir cargos del período de [RCAmount] por el número de días en el período).&lt;BR&gt;</value>
@@ -674,32 +674,26 @@
   </data>
   <data name="TEXT_PASSWORD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{es-MX} Passwords do not match.</value>
-  </data>
+  </data>  
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{es-MX} Enter a valid phone number. Format: 555-555-5555</value>
-  </data>
+  </data>    
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{es-MX} Credit card format is invalid</value>
-  </data>
+  </data>      
   <data name="TEXT_CREDITCARD_VERIFICATIONNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{es-MX} CV Number is invalid</value>
-  </data>
+  </data>        
   <data name="TEXT_SSN_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{es-MX} SSN format: xxx-xx-xxxx</value>
-  </data>
+  </data>          
   <data name="TEXT_ACCOUNTNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{es-MX} Only numeric digits are allowed</value>
-  </data>
+  </data>            
   <data name="TEXT_ZIPCODE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{es-MX} Zipcode is invalid</value>
-  </data>
+  </data>              
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{es-MX} Middle initial is invalid</value>
-  </data>
-  <data name="EXTJS_DATE_FORMAT" xml:space="preserve">
-    <value>n/j/Y</value>
-  </data>
-  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
-    <value>n/j/Y g:i:s A</value>
-  </data>
+  </data>  
 </root>
